// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> classic should render after initialization 1`] = `
<div>
  <div
    class="mfui-select mfui-select_no-touch custom-class root"
    data-testid="root"
  >
    <div
      class="mfui-select__inner"
    >
      <div
        class="mfui-select__control mfui-select__control_labeled control"
        data-testid="control"
      >
        <div
          class="mfui-select__title title"
          data-testid="title"
          role="button"
          tabindex="0"
        >
          <div
            class="mfui-select__title-inner mfui-select__title-inner_hide-value title-inner"
            data-testid="title-inner"
          >
            <div
              class="mfui-select__title-value"
            >
              test-placeholder
            </div>
            <label
              class="mfui-select__label"
              data-testid="label"
              for="1"
            >
              test-label
              <span
                class="mfui-select__require-mark"
              >
                *
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mfui-select__list list"
        data-testid="list"
      >
        <div
          class="mfui-select__list-inner list-inner"
          data-testid="list-inner"
        >
          <div
            class="mfui-select__list-item mfui-select__list-item_hovered mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[1]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[1]"
            >
              first item title
            </div>
          </div>
          <div
            class="mfui-select__list-item mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[2]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[2]"
            >
              second item title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mfui-select__text"
      data-testid="notice-text"
    >
      test-notice-text
    </div>
  </div>
</div>
`;

exports[`<Select /> classic should render after select item 1`] = `
<div>
  <div
    class="mfui-select mfui-select_no-touch custom-class root"
    data-testid="root"
  >
    <div
      class="mfui-select__inner"
    >
      <div
        class="mfui-select__control mfui-select__control_labeled control"
        data-testid="control"
      >
        <div
          class="mfui-select__title title"
          data-testid="title"
          role="button"
          tabindex="0"
        >
          <div
            class="mfui-select__title-inner title-inner"
            data-testid="title-inner"
          >
            <div
              class="mfui-select__title-value"
            >
              first item title
            </div>
            <label
              class="mfui-select__label"
              data-testid="label"
              for="1"
            >
              test-label
              <span
                class="mfui-select__require-mark"
              >
                *
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mfui-select__list list"
        data-testid="list"
      >
        <div
          class="mfui-select__list-inner list-inner"
          data-testid="list-inner"
        >
          <div
            class="mfui-select__list-item mfui-select__list-item_hovered mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[1]"
          >
            <div
              class="mfui-select__item-title mfui-select__item-title_active list-item-title"
              data-testid="list-item-title[1]"
            >
              first item title
            </div>
          </div>
          <div
            class="mfui-select__list-item mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[2]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[2]"
            >
              second item title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mfui-select__text"
      data-testid="notice-text"
    >
      test-notice-text
    </div>
  </div>
</div>
`;

exports[`<Select /> combobox should render after changing input 1`] = `
<div>
  <div
    class="mfui-select mfui-select_open mfui-select_no-touch custom-class root"
    data-testid="root"
  >
    <div
      class="mfui-select__inner"
    >
      <div
        class="mfui-select__control mfui-select__control_labeled control"
        data-testid="control"
      >
        <input
          class="mfui-select__combobox"
          data-testid="input"
          placeholder="test-placeholder"
          type="text"
          value="first"
        />
        <label
          class="mfui-select__label"
          data-testid="label"
          for="1"
        >
          test-label
          <span
            class="mfui-select__require-mark"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="mfui-select__list list"
        data-testid="list"
      >
        <div
          class="mfui-select__list-inner list-inner"
          data-testid="list-inner"
        >
          <div
            class="mfui-select__list-item mfui-select__list-item_hovered mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[1]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[1]"
            >
              
              <span
                class="mfui-select__highlighted-fragment"
              >
                first
              </span>
               item title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mfui-select__text"
      data-testid="notice-text"
    >
      test-notice-text
    </div>
  </div>
</div>
`;

exports[`<Select /> combobox should render after initialization 1`] = `
<div>
  <div
    class="mfui-select mfui-select_no-touch custom-class root"
    data-testid="root"
  >
    <div
      class="mfui-select__inner"
    >
      <div
        class="mfui-select__control mfui-select__control_labeled control"
        data-testid="control"
      >
        <input
          class="mfui-select__combobox mfui-select__combobox_hide-value"
          data-testid="input"
          placeholder="test-placeholder"
          type="text"
          value=""
        />
        <label
          class="mfui-select__label"
          data-testid="label"
          for="1"
        >
          test-label
          <span
            class="mfui-select__require-mark"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="mfui-select__list list"
        data-testid="list"
      >
        <div
          class="mfui-select__list-inner list-inner"
          data-testid="list-inner"
        >
          <div
            class="mfui-select__list-item mfui-select__list-item_hovered mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[1]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[1]"
            >
              f
              
              i
              
              r
              
              s
              
              t
              
               
              
              i
              
              t
              
              e
              
              m
              
               
              
              t
              
              i
              
              t
              
              l
              
              e
            </div>
          </div>
          <div
            class="mfui-select__list-item mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[2]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[2]"
            >
              s
              
              e
              
              c
              
              o
              
              n
              
              d
              
               
              
              i
              
              t
              
              e
              
              m
              
               
              
              t
              
              i
              
              t
              
              l
              
              e
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mfui-select__text"
      data-testid="notice-text"
    >
      test-notice-text
    </div>
  </div>
</div>
`;

exports[`<Select /> combobox should render after select item 1`] = `
<div>
  <div
    class="mfui-select mfui-select_no-touch custom-class root"
    data-testid="root"
  >
    <div
      class="mfui-select__inner"
    >
      <div
        class="mfui-select__control mfui-select__control_labeled control"
        data-testid="control"
      >
        <input
          class="mfui-select__combobox"
          data-testid="input"
          placeholder="test-placeholder"
          type="text"
          value="first item title"
        />
        <label
          class="mfui-select__label"
          data-testid="label"
          for="1"
        >
          test-label
          <span
            class="mfui-select__require-mark"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="mfui-select__list list"
        data-testid="list"
      >
        <div
          class="mfui-select__list-inner list-inner"
          data-testid="list-inner"
        >
          <div
            class="mfui-select__list-item mfui-select__list-item_hovered mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[1]"
          >
            <div
              class="mfui-select__item-title mfui-select__item-title_active list-item-title"
              data-testid="list-item-title[1]"
            >
              f
              
              i
              
              r
              
              s
              
              t
              
               
              
              i
              
              t
              
              e
              
              m
              
               
              
              t
              
              i
              
              t
              
              l
              
              e
            </div>
          </div>
          <div
            class="mfui-select__list-item mfui-select__list-item_paddings_large list-item"
            data-testid="list-item[2]"
          >
            <div
              class="mfui-select__item-title list-item-title"
              data-testid="list-item-title[2]"
            >
              s
              
              e
              
              c
              
              o
              
              n
              
              d
              
               
              
              i
              
              t
              
              e
              
              m
              
               
              
              t
              
              i
              
              t
              
              l
              
              e
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mfui-select__text"
      data-testid="notice-text"
    >
      test-notice-text
    </div>
  </div>
</div>
`;
